--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<router-outlet />
+
+<div class="card flex justify-content-center">
+  <p-button label="Check" icon="pi pi-check"></p-button>
+</div>
