WIP : marées form

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<router-outlet />
-
-<div class="card flex justify-content-center">
-  <p-button label="Check" icon="pi pi-check"></p-button>
+<div class="flex h-screen justify-content-center align-items-center">
+  <app-marees-page />
+  <router-outlet />
 </div>
